--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test= "shoppingList">BMW</li>
+		<li data-ns-test= "shoppingList">Penthouse</li>
+		<li data-ns-test= "shoppingList">Villa</li>
+	</ol>
+	<ul>
+		<li data-ns-test= "holidayList">Goa</li>
+		<li data-ns-test= "holidayList">Thailand</li>
+		<li data-ns-test= "holidayList">USA</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
